Tried to fix layout shift for charts, but need Robbie's help

--- a/UI/Web/src/app/statistics/_components/file-breakdown-stats/file-breakdown-stats.component.scss
+++ b/UI/Web/src/app/statistics/_components/file-breakdown-stats/file-breakdown-stats.component.scss
@@ -2,3 +2,11 @@
     top: unset !important;
     transform: unset !important;
 }
+
+.dashboard-card-content {
+    width: 100%;
+    height: 242px;
+    display: flex;
+    flex-flow: column;
+    box-sizing: border-box;
+}
